// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager Test error notification with top-left position 1`] = `
<div
  class="vuedl-notification left"
  role="alert"
  style="max-width: 330px; z-index: 2000; top: 10px;"
>
  <div>
    <div>
      Test notification
    </div>
  </div>
   
  <div
    class="vuedl-notification__closeBtn"
  >
    ×
  </div>
</div>
`;

exports[`manager Test success notification 1`] = `
<div
  class="vuedl-notification right"
  role="alert"
  style="max-width: 330px; z-index: 2000; top: 10px;"
>
  <div>
    <div>
      Test notification
    </div>
  </div>
   
  <div
    class="vuedl-notification__closeBtn"
  >
    ×
  </div>
</div>
`;

exports[`manager Test warning notification with bottom-right position 1`] = `
<div
  class="vuedl-notification right"
  role="alert"
  style="max-width: 330px; z-index: 2000; bottom: 10px;"
>
  <div>
    <div>
      Test notification
    </div>
  </div>
   
  <div
    class="vuedl-notification__closeBtn"
  >
    ×
  </div>
</div>
`;
